# TCT-analysis

./: .gitignore  CMakeLists.txt  README.md  TBrowser.pro  TCT-analysis.pro
cmake/: CMakeCompatibility.cmake  FindLCR.cmake  FindTCTAnalyze.cmake  Platform.cmake  config.cmake.h  version.cmake.tex
developers_guide/: tctanalysis_developers_guide.tex
doc/doxygen/: Doxyfile.in
forms/: base.ui  form_folders.ui  form_parameters.ui  form_sample.ui
include/: TCTModule.h  TCTReader.h  acquisition.h  analysis.h  base.h  gui_consoleoutput.h  gui_folders.h  gui_sample.h  measurement.h  param.h  qdebugstream.h  sample.h  scanning.h  tct_config.h  util.h
include/modules/: ModuleEdgeDepletion.h  ModuleEdgeField.h  ModuleEdgeFocus.h  ModuleLaserAnalysis.h  ModuleTopDepletion.h  ModuleTopFocus.h  ModuleTopMobility.h
src/: .main.cc.swp  .pulse.h.swp  .sample.h.swp  TCTModule.cc  TCTReader.cc  acquisition.cc  analysis.cc  base.cc  gui_folders.cc  gui_sample.cc  main.cc  main.cxx  main_gui.cxx  measurement.cc  pulse.h  sample.cc  sample.h  scanning.cc  tbrowser.cxx  tct_config.cc  util.cc
src/modules/: ModuleEdgeDepletion.cc  ModuleEdgeField.cc  ModuleEdgeFocus.cc  ModuleLaserAnalysis.cc  ModuleTopDepletion.cc  ModuleTopFocus.cc  ModuleTopMobility.cc
testanalysis/: ana_red_m2015.txt  lpnhe_top.txt  test_ana.txt  test_ana_osc.txt
testdata/S57/295K/500V/: C2S57_295k_500v00000.txt  C2S57_295k_500v00001.txt  C2S57_295k_500v00002.txt  C2S57_295k_500v00003.txt  C2S57_295k_500v00004.txt  C2S57_295k_500v00005.txt
testsensor/: SC_CE2339.txt  SC_M2015.txt  SC_S57.txt
